added highlighted example

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "index.js"
   ],
   "scripts": {
-    "start": "budo -p 8080 -H 0.0.0.0 example.js",
+    "start": "budo -p 8080 -H 0.0.0.0 example.js -- -t sheetify",
     "test": "standard --verbose | snazzy && tape test.js | tap-summary"
   },
   "repository": "YerkoPalma/marli",
@@ -24,6 +24,8 @@
     "assert-html": "^1.1.5",
     "bel": "^5.1.0",
     "budo": "^10.0.4",
+    "highlight-syntax": "^3.0.2",
+    "sheetify": "^6.1.1",
     "snazzy": "^7.0.0",
     "standard": "^10.0.3",
     "tap-summary": "^4.0.0",
